welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:26: error: type red is not a member of object java.awt.Color
hunt(c:Color.red)
             ^